syntax = "proto3";

option csharp_namespace = "GrpcServerTest";

package telemetry;

// The greeting service definition.
service Telemetry {
  // Sends a greeting
  rpc ChannelRead (TelemetryRequest) returns (ServerResponse);
}

// The request message containing the user's name.
message TelemetryRequest {
  string Data = 1;
}

// The response message containing the greetings.
message ServerResponse {
  string message = 1;
}
